zta/microservice3/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zta-microservice3
spec:
  selector:
    app: zta-microservice3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
  type: ClusterIP
